--- a/public/bookmark/styles.css
+++ b/public/bookmark/styles.css
@@ -8,18 +8,18 @@ body {
   padding: 0;
   overflow: hidden;
   /* background: #111; */
-  background-image: url("sus.png");
+  background-image: url("sus3.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .signupSection {
   /* background: url(https://source.unsplash.com/TV2gg2kZD1o/1600x800); */
-  background-image: url("./sus.png");
-  background-size: cover;
+  /* background-image: url("./sus3.png"); */
+  background-size:cover;
   background-repeat: no-repeat;
   position: relative;
-  margin-top: 25%;
+  margin-top: 23%;
   margin-left: 50%;
   transform: translate(-50%, -50%);
   width: 118rem;
@@ -53,13 +53,13 @@ body {
 .info .icon {
   font-size: 8em;
   padding: 20px 0;
-  color: rgb(92, 182, 255);
+  color: rgb(255, 184, 92);
 }
 
 .signupForm {
   width: 100%;
   padding: 30px 140px;
-  background: rgba(0, 26, 33, 0.29);
+  /* background: rgba(0, 26, 33, 0.29); */
   transition: 0.2s;
 }
 
@@ -82,11 +82,11 @@ body {
 
 .inputFields {
   margin: 15px 0;
-  font-size: 25px;
+  font-size: 35px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding: 10px;
   width: 500px;
-  border: 1px solid rgb(0, 101, 155);
+  border: 1px solid rgb(255, 202, 149);
   border-top: none;
   border-left: none;
   border-right: none;
@@ -100,7 +100,7 @@ body {
   font-size: 16px;
   padding: 10px;
   width: 188px;
-  border: 1px solid rgba(10, 180, 180, 1);
+  border: 1px solid rgb(255, 216, 110);
   border-top: none;
   border-left: none;
   border-right: none;
@@ -115,7 +115,7 @@ body {
 }
 
 .join-btn {
-  border: 1px solid rgb(0, 157, 255);
+  border: 1px solid rgb(255, 183, 0);
   background: rgba(20, 20, 20, 0.6);
   font-size: 18px;
   color: white;
@@ -131,14 +131,14 @@ body {
 }
 
 #pMessage{
-  border: 1px solid rgb(196, 248, 255);
+  border: 1px solid rgb(255, 223, 196);
   background: rgba(0, 5, 50, 0.402);
   font-size: 25px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   color: rgb(255, 255, 255);
   position: absolute;
   /* align-content: flex-start; */
-  margin-top: 43%;
+  margin-top: 40%;
   margin-left: -67%;
   padding: 1rem 2rem;
   cursor: pointer;
@@ -147,9 +147,9 @@ body {
 }
 
 #uploadButton {
-  border: 1px solid rgb(27, 166, 212);
+  border: 1px solid rgb(255, 212, 119);
   background: rgba(20, 20, 20, 0.6);
-  font-size: 25px;
+  font-size: 35px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   color: white;
   margin: auto;
@@ -159,9 +159,9 @@ body {
   display: none;
 }
 #sendInput {
-  border: 1px solid rgb(0, 53, 134);
+  border: 1px solid rgb(255, 194, 63);
   background: rgba(20, 20, 20, 0.6);
-  font-size:25px;
+  font-size:30px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   color: white;
   position: absolute;
@@ -173,7 +173,7 @@ body {
   display: none;
 }
 #sendInput:hover {
-  background: rgba(0, 42, 116, 0.612);
+  background: rgba(116, 79, 0, 0.612);
   /* padding: 10px 80px; */
 }
 #uploadButton:hover {
@@ -188,7 +188,7 @@ body {
 }
 
 div[id^="bmno"] {
-  border: 0px solid #62a6ff;
+  border: 0px solid #ffbb62;
   /* background: rgba(20, 20, 20, 0.6); */
   position: relative;
   font-size: 18px;
