--- a/public/compress/style.css
+++ b/public/compress/style.css
@@ -1,3 +1,194 @@
+*{
+    margin: 0;padding: 0;
+    font-size: 15px;
+    font-family: Ubuntu;
+    font-weight: 500;
+}
 .hidden{
     display: none;
 }
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    overflow: hidden;
+    background-image: url("../bookmark/sus3.png");
+    background-repeat: no-repeat;
+    background-size:cover;
+    width: 100vw;
+    height: 100vh;
+}
+
+#signup-section{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 80%;
+    background-color: transparent;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#info{
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 2%;
+    background-color: transparent;
+    border: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
+}
+
+#reload{
+    display: flex;
+    height: fit-content;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 8px 20px;
+    margin: 15px 0 0 15px;
+    background-color: transparent;
+    border:none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: white;
+    font-size: 15px; font-weight: 500;
+}
+
+#upload-phase{
+    display: flex none;
+    position: absolute;
+    left: 15%;
+}
+
+#compress-upload-input{
+    padding: 10px;
+    color: white;
+    background-color: transparent;
+    border:none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#compress-upload-form{
+    position: relative;
+}
+
+#submit_button{
+    padding: 10px;
+    background-color: transparent;
+    border:none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: white;
+    position: absolute;
+    left:40%;
+}
+
+#image{
+    display: flex;
+    position: absolute;
+    right:14%;
+    animation: animate 2s infinite ease alternate;
+}
+
+@keyframes animate {
+    to{
+        transform: translateY(20px);
+    }        
+}
+
+#send-split-data{
+    display: flex;
+    padding: 10px;
+    position: absolute;
+    left: 35%;
+    font-size: 20px;
+    padding-top: 10px;
+    background-color: transparent;
+    justify-content: center;
+    border:none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: white;
+}
+
+#download-phase{
+    display: flex none;
+    position: absolute;
+    left: 20%;
+    flex-direction: column;
+    padding: 35px 0 0 10px;
+    justify-content: center;
+    align-items: center;padding: 20px;
+}
+
+#label{
+    padding: 10px 10px 10px 0;
+
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #f37521;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #f37521;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  #super{
+    display: flex;
+    flex-direction: row;
+    align-items: center;justify-content: center;position: relative;
+  }
